--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
+    "@netlify/neon": "^0.1.2",
     "date-fns": "^3.6.0",
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
