--- a/netlify.toml
+++ b/netlify.toml
@@ -6,11 +6,69 @@
 [functions]
   node_bundler = "esbuild"
 
+# Public API
 [[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
+  from = "/api/courses/:slug/day/:day"
+  to = "/.netlify/functions/courses/:slug/day/:day"
   status = 200
 
+[[redirects]]
+  from = "/api/courses/:slug"
+  to = "/.netlify/functions/courses/:slug"
+  status = 200
+
+[[redirects]]
+  from = "/api/attendance"
+  to = "/.netlify/functions/attendance"
+  status = 200
+
+[[redirects]]
+  from = "/api/certificates/:code/pdf"
+  to = "/.netlify/functions/certificates/:code/pdf"
+  status = 200
+
+[[redirects]]
+  from = "/api/certificates/:code"
+  to = "/.netlify/functions/certificates/:code"
+  status = 200
+
+# Admin API
+[[redirects]]
+  from = "/api/admin/certificates/send"
+  to = "/.netlify/functions/admin-send-certificates"
+  status = 200
+
+[[redirects]]
+  from = "/api/admin/courses/:id/trainers"
+  to = "/.netlify/functions/admin-course-details/:id/trainers"
+  status = 200
+
+[[redirects]]
+  from = "/api/admin/courses/:id/days"
+  to = "/.netlify/functions/admin-course-details/:id/days"
+  status = 200
+
+[[redirects]]
+  from = "/api/admin/courses/:id/attendance"
+  to = "/.netlify/functions/admin-course-details/:id/attendance"
+  status = 200
+
+[[redirects]]
+  from = "/api/admin/courses/:id/certificates"
+  to = "/.netlify/functions/admin-course-details/:id/certificates"
+  status = 200
+
+[[redirects]]
+  from = "/api/admin/courses/:id"
+  to = "/.netlify/functions/admin-courses/:id"
+  status = 200
+
+[[redirects]]
+  from = "/api/admin/courses"
+  to = "/.netlify/functions/admin-courses"
+  status = 200
+
+# SPA fallback - must be last
 [[redirects]]
   from = "/*"
   to = "/index.html"
